Keep legacy presence tests Java 8 compatible